# wasm-small

./: .gitignore  Cargo.toml  index.js  package-lock.json  package.json
src/: lib.rs
