[package]
name = "wasm-small"
version = "0.1.0"
authors = ["Oscar Esgalha <oscar@instruct.com.br>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
